[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-changelog-gen"
version = "0.1.0"
description = "Git-based changelog generator from conventional commits"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

[project.scripts]
changelog-gen = "philiprehberger_changelog_gen:main"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_changelog_gen"]
