[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-changelog-gen"
version = "0.1.9"
description = "Git-based changelog generator from conventional commits"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["changelog", "git", "conventional-commits", "release", "generator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.scripts]
changelog-gen = "philiprehberger_changelog_gen:main"

[project.urls]
Homepage = "https://github.com/philiprehberger/py-changelog-gen#readme"
Repository = "https://github.com/philiprehberger/py-changelog-gen"
Issues = "https://github.com/philiprehberger/py-changelog-gen/issues"
Changelog = "https://github.com/philiprehberger/py-changelog-gen/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_changelog_gen"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
